--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>x-callout demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="./dist/widgets.js"></script>
-    <!-- <script type="module" src="/src/main.js"></script> -->
+    <!-- <script type="module" src="./dist/widgets.js"></script> -->
+    <script type="module" src="/src/main.js"></script>
 
     <style>
       body {
@@ -17,25 +17,8 @@
   </head>
 
   <body>
-    <x-audio-brief
-      title="Audio Brief: China’s Engagement in the Global South with Lily McElwee"
-      audio-src="https://res.cloudinary.com/csisideaslab/video/upload/v1707945817/Shorthand/Global%20Forecast/L_McElwee_AB_v3_mixdown.mp3"
-      transcript-src=""
-      bg-image="https://res.cloudinary.com/csisideaslab/image/upload/v1760987949/dev-team/Global-Forecast-AudioBG.jpg"
-      bg-color="#050f27"
-      font-url="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      font-family="'Open Sans', serif" style="
-    --ab-border-radius: 20px;
-    --ab-text: #fffefa;
-    --ab-surface: #0d1e45;
-    --ab-accent: #5ea0ff;
-    --ab-progress-bg: #ffffff30;
-    --ab-progress-fill: #0066cc;
-    --ab-menu-bg: #f9f9f9;
-    --ab-menu-hover-bg: #0a2458;
-    --ab-menu-hover-fg: #fcfcfc;
-    --ab-icon-filter: invert(100%) sepia(59%) saturate(541%) hue-rotate(298deg) brightness(104%) contrast(105%);
-  "></x-audio-brief>
+    <csis-shorthand-footer background-color="#2b2b2b" text-color="#f7f7f7">
+    </csis-shorthand-footer>
   </body>
 
 </html>
