--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <script type="module" src="./dist/widgets.js"></script> -->
     <script type="module" src="/src/main.js"></script>
+     <!-- <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.1.6/dist/widgets.js"></script> -->
 
     <style>
       body {
