--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8" />
     <title>x-callout demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <script type="module" src="./dist/widgets.js"></script> -->
-    <script type="module" src="/src/main.js"></script>
-     <!-- <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.1.6/dist/widgets.js"></script> -->
+     <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.1.8/dist/widgets.js"></script>
 
     <style>
       body {
