Update footer CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <title>x-callout demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-     <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.1.8/dist/widgets.js"></script>
+     <!-- <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.1.9/dist/widgets.js"></script> -->
+      <script type="module" src="src/main.js"></script>
 
     <style>
       body {
@@ -16,7 +17,7 @@
   </head>
 
   <body>
-    <csis-shorthand-footer background-color="#2b2b2b" text-color="#f7f7f7">
+    <csis-shorthand-footer >
     </csis-shorthand-footer>
   </body>
 
