--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>x-callout demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-     <!-- <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.2.1/dist/widgets.js"></script> -->
-      <script type="module" src="src/main.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.2.1/dist/widgets.js"></script> -->
+    <script type="module" src="src/main.js"></script>
     <style>
       body {
         font-family: system-ui, sans-serif;
@@ -16,8 +16,7 @@
   </head>
 
   <body>
-    <csis-shorthand-footer >
-    </csis-shorthand-footer>
+    <csis-bootcamp-player></csis-bootcamp-player>
   </body>
 
 </html>
