add audio highlight - WIP

--- a/index.html
+++ b/index.html
@@ -8,15 +8,11 @@
     <!-- <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.2.1/dist/widgets.js"></script> -->
     <script type="module" src="src/main.js"></script>
     <style>
-      body {
-        font-family: system-ui, sans-serif;
-        margin: 2rem
-      }
     </style>
   </head>
 
   <body>
-    <csis-bootcamp-player></csis-bootcamp-player>
+    <csis-audio-highlight></csis-audio-highlight>
   </body>
 
 </html>
