--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   </head>
 
   <body>
+    <!-- Default usage (no attributes) -->
     <csis-audio-highlight></csis-audio-highlight>
+
+    <!-- Custom example with colors and a different audio clip -->
   </body>
 
 </html>
