change prop name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <!-- Default usage (no attributes) -->
-    <csis-audio-highlight></csis-audio-highlight>
+    <csis-audio-highlight highlight-text-color="#ff0000" highlight-bg="#000"></csis-audio-highlight>
 
     <!-- Custom example with colors and a different audio clip -->
   </body>
