--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta charset="utf-8" />
-    <title>x-callout demo</title>
+    <meta charset="UTF-8" />
+    <title>Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <script src="https://cdn.jsdelivr.net/gh/CSIS-iLab/shorthand-widgets@v0.2.1/dist/widgets.js"></script> -->
     <script type="module" src="src/main.js"></script>
     <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
 
   <body>
-    <!-- Default usage (no attributes) -->
-    <csis-audio-highlight highlight-text-color="#ff0000" highlight-bg="#000"></csis-audio-highlight>
-
-    <!-- Custom example with colors and a different audio clip -->
+    <csis-splitflap></csis-splitflap>
   </body>
 
 </html>
