--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
   </head>
 
   <body>
-    <csis-author-grid></csis-author-grid>
+    <csis-author-grid count="4" author-1-name="FirstName LastName"
+      author-1-title="Author 1 Title"
+      author-1-image="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"
+      author-1-url="https://www.csis.org/about/people"
+      author-2-name="FirstName LastName"
+      author-2-title="Author 2 Title"
+      author-2-image="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKr5wT7rfkjkGvNeqgXjBmarC5ZNoZs-H2uMpML8O7Q4F9W-IlUQibBT6IPqyvX45NOgw&usqp=CAU"
+      author-2-url="https://www.csis.org/about/people"
+      author-3-name="FirstName LastName"
+      author-3-title="Author 3 Title"
+      author-3-image="https://images.unsplash.com/photo-1596854407944-bf87f6fdd49e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2080&q=80"
+      author-3-url="https://www.csis.org/about/people"
+      author-4-name="FirstName LastName" author-4-title="Author 4 Title"
+      author-4-image="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2080&q=80"
+      author-4-url="https://www.csis.org/about/people"></csis-author-grid>
   </body>
 
 </html>
