Add more properties to handle the split landing page component

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       bg-image-right="https://res.cloudinary.com/csisideaslab/image/upload/v1759341280/dev-team/annie-spratt-4CKAvwj0nok-unsplash.jpg"
       background-image-alt-right="testing alt right"
       right-title="This is another title"
+      btn-text="Link"
     ></csis-split-landing>
   </body>
 </html>
