Add magnifier component

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-- <csis-test></csis-test> -->
-    <csis-split-landing
+    <!--<csis-split-landing
       left-title="This is a title"
       bg-image-left="https://res.cloudinary.com/csisideaslab/image/upload/v1759435607/dev-team/annie-spratt-4CKAvwj0nok-unsplash-EDIT-EDIT.jpg"
       background-image-alt-left="testing alt left"
@@ -24,6 +24,13 @@
       background-image-alt-right="testing alt right"
       right-title="This is another title"
       btn-text="Link"
-    ></csis-split-landing>
+    ></csis-split-landing>-->
+    <!--<div style="max-width: 90%; margin-inline: auto">
+      <csis-magnifier
+        bg-image="https://res.cloudinary.com/csisideaslab/image/upload/v1759341280/dev-team/annie-spratt-4CKAvwj0nok-unsplash.jpg"
+        background-image-alt="image alt"
+        magnifier-zoom="2.5"
+      ></csis-magnifier>-->
+    </div>
   </body>
 </html>
