Added infinity scroll component

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <!-- <csis-test></csis-test> -->
+    <!--split-landing-->
     <!--<csis-split-landing
       left-title="This is a title"
       bg-image-left="https://res.cloudinary.com/csisideaslab/image/upload/v1759435607/dev-team/annie-spratt-4CKAvwj0nok-unsplash-EDIT-EDIT.jpg"
@@ -25,12 +25,29 @@
       right-title="This is another title"
       btn-text="Link"
     ></csis-split-landing>-->
+
+    <!--magnifier-->
     <!--<div style="max-width: 90%; margin-inline: auto">
       <csis-magnifier
         bg-image="https://res.cloudinary.com/csisideaslab/image/upload/v1759341280/dev-team/annie-spratt-4CKAvwj0nok-unsplash.jpg"
         background-image-alt="image alt"
         magnifier-zoom="2.5"
-      ></csis-magnifier>-->
-    </div>
+      ></csis-magnifier>
+    </div>-->
+
+    <!--infinity-scroll-->
+    <csis-infinity-scroll
+      title="Team"
+      cards='[
+        { "src": "https://assets.codepen.io/16327/portrait-number-1.png", "alt": "Person 1" },
+        { "src": "https://assets.codepen.io/16327/portrait-number-2.png", "alt": "Person 2" },
+        { "src": "https://assets.codepen.io/16327/portrait-number-3.png", "alt": "Person 3" },
+        { "src": "https://assets.codepen.io/16327/portrait-number-4.png", "alt": "Person 4" },
+        { "src": "https://assets.codepen.io/16327/portrait-number-5.png", "alt": "Person 5" },
+        { "src": "https://assets.codepen.io/16327/portrait-number-1.png", "alt": "Repeat 1" },
+        { "src": "https://assets.codepen.io/16327/portrait-number-2.png", "alt": "Repeat 2" },
+        { "src": "https://assets.codepen.io/16327/portrait-number-3.png", "alt": "Repeat 3" }
+      ]'
+    ></csis-infinity-scroll>
   </body>
 </html>
