Added text typing web component

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>-->
 
     <!--infinity-scroll-->
-    <csis-infinity-scroll
+    <!--<csis-infinity-scroll
       title="Team"
       cards='[
         { "src": "https://assets.codepen.io/16327/portrait-number-1.png", "alt": "Person 1" },
@@ -48,6 +48,14 @@
         { "src": "https://assets.codepen.io/16327/portrait-number-2.png", "alt": "Repeat 2" },
         { "src": "https://assets.codepen.io/16327/portrait-number-3.png", "alt": "Repeat 3" }
       ]'
-    ></csis-infinity-scroll>
+    ></csis-infinity-scroll>-->
+
+    <!--text-typing-->
+    <csis-text-typing
+      first-p="This is a random"
+      second-p="message to test"
+      third-p="this web component"
+      bg-color="#ccc"
+    ></csis-text-typing>
   </body>
 </html>
