create dev directory, update cpp callout to stay in production directory

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   </head>
 
   <body>
-    <csis-author-grid count="4" author-1-name="FirstName LastName"
+    <csis-cpp-callout bg="#333"></csis-cpp-callout>
+    <!-- <csis-author-grid count="4" author-1-name="FirstName LastName"
       author-1-title="Author 1 Title"
       author-1-image="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"
       author-1-url="https://www.csis.org/about/people"
@@ -30,7 +31,7 @@
       author-3-url="https://www.csis.org/about/people"
       author-4-name="FirstName LastName" author-4-title="Author 4 Title"
       author-4-image="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2080&q=80"
-      author-4-url="https://www.csis.org/about/people"></csis-author-grid>
+      author-4-url="https://www.csis.org/about/people"></csis-author-grid> -->
   </body>
 
 </html>
