add default audio src to audio brief to prevent testing confusion

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <csis-cpp-callout bg="#333"></csis-cpp-callout>
+    <csis-audio-brief></csis-audio-brief>
     <!-- <csis-author-grid count="4" author-1-name="FirstName LastName"
       author-1-title="Author 1 Title"
       author-1-image="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"
