--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <title>Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script type="module" src="src/main.js"></script>
+    <!-- Vite dev server prefers the leading slash -->
+    <script type="module" src="/src/main.js"></script>
     <style>
       html,
       body {
         margin: 0;
         padding: 0;
+        min-height: 100%;
+      }
+
+      main {
+        min-height: 80vh;
+        padding: 2rem;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          sans-serif;
       }
     </style>
   </head>
 
   <body>
-    <csis-audio-brief></csis-audio-brief>
-    <!-- <csis-author-grid count="4" author-1-name="FirstName LastName"
-      author-1-title="Author 1 Title"
-      author-1-image="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"
-      author-1-url="https://www.csis.org/about/people"
-      author-2-name="FirstName LastName"
-      author-2-title="Author 2 Title"
-      author-2-image="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKr5wT7rfkjkGvNeqgXjBmarC5ZNoZs-H2uMpML8O7Q4F9W-IlUQibBT6IPqyvX45NOgw&usqp=CAU"
-      author-2-url="https://www.csis.org/about/people"
-      author-3-name="FirstName LastName"
-      author-3-title="Author 3 Title"
-      author-3-image="https://images.unsplash.com/photo-1596854407944-bf87f6fdd49e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2080&q=80"
-      author-3-url="https://www.csis.org/about/people"
-      author-4-name="FirstName LastName" author-4-title="Author 4 Title"
-      author-4-image="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2080&q=80"
-      author-4-url="https://www.csis.org/about/people"></csis-author-grid> -->
-  </body>
+    <main>
+      <h1>Test page</h1>
+      <p>
+        This is just some placeholder content so we can see where the footer
+        ends up on the page.
+      </p>
+    </main>
 
+    <csis-shorthand-footer></csis-shorthand-footer>
+  </body>
 </html>
