Update CSS for Footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Vite dev server prefers the leading slash -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/dev-main.js"></script>
     <style>
       html,
       body {
