Add TextType component

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,7 +17,11 @@
       main {
         min-height: 80vh;
         padding: 2rem;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        font-family:
+          system-ui,
+          -apple-system,
+          BlinkMacSystemFont,
+          "Segoe UI",
           sans-serif;
       }
     </style>
@@ -32,6 +36,12 @@
       </p>
     </main>
 
+    <csis-text-typing
+      first-p="testing first paragraph"
+      second-p="testing second paragraph"
+      third-p="testing third paragraph"
+      bg-color="#5E636E"
+    ></csis-text-typing>
     <csis-shorthand-footer></csis-shorthand-footer>
   </body>
 </html>
