Update component with new attributes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       second-p="testing second paragraph"
       third-p="testing third paragraph"
       bg-color="#5E636E"
+      font-url="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'"
+      font-family="'Orbitron', system-ui, sans-serif"
+      font-size="4rem"
+      font-color="#fff"
     ></csis-text-typing>
     <csis-shorthand-footer></csis-shorthand-footer>
   </body>
