Add animation duration attribute

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       font-family="'Orbitron', system-ui, sans-serif"
       font-size="4rem"
       font-color="#fff"
+      animation-duration="10s"
     ></csis-text-typing>
     <csis-shorthand-footer></csis-shorthand-footer>
   </body>
