Update styles to show animation line by line

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </main>
 
     <csis-text-typing
-      first-p="testing first paragraph"
-      second-p="testing second paragraph"
-      third-p="testing third paragraph"
+      first-p="A new space race is underway."
+      second-p="Countries everywhere want in."
+      third-p="But they need partners who can get them there."
       bg-color="#5E636E"
       font-url="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'"
       font-family="'Orbitron', system-ui, sans-serif"
