Component now takes array of string

--- a/index.html
+++ b/index.html
@@ -37,14 +37,18 @@
     </main>
 
     <csis-text-typing
-      first-p="A new space race is underway."
-      second-p="Countries everywhere want in."
-      third-p="But they need partners who can get them there."
+      lines='[
+        "A new space race is underway.",
+        "Countries everywhere want in.",
+        "But they need partners who",
+        "can get them there."
+      ]'
       bg-color="#5E636E"
       font-url="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'"
       font-family="'Orbitron', system-ui, sans-serif"
       font-size="2rem"
       font-color="#fff"
+      cursor-color="fff"
       animation-duration="5s"
     ></csis-text-typing>
     <csis-shorthand-footer></csis-shorthand-footer>
