--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       font-family="'Orbitron', system-ui, sans-serif"
       font-size="2rem"
       font-color="#fff"
-      cursor-color="fff"
+      cursor-color="#fff"
       animation-duration="5s"
     ></csis-text-typing>
     <csis-shorthand-footer></csis-shorthand-footer>
