Add magnifier component

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       cursor-color="#fff"
       animation-duration="5s"
     ></csis-text-typing>
+
+    <csis-magnifier></csis-magnifier>
     <csis-shorthand-footer></csis-shorthand-footer>
   </body>
 </html>
