Add attribute to expose to change the border color

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       animation-duration="5s"
     ></csis-text-typing>
 
-    <csis-magnifier></csis-magnifier>
+    <csis-magnifier magnifier-border-color="#fff"></csis-magnifier>
     <csis-shorthand-footer></csis-shorthand-footer>
   </body>
 </html>
