Switched TextTyping from per-line CSS typing animations to a JS-driven character reveal loop.
CSS line-based typing cannot support responsive wrapping; characters now
render progressively while allowing the browser to handle layout naturally.

Includes:
- newline + blank-line support
- responsive wrapping in all viewports
- configurable component height via CSS var
- duration-based typing speed across total characters

--- a/index.html
+++ b/index.html
@@ -37,19 +37,14 @@
     </main>
 
     <csis-text-typing
-      lines='[
-        "A new space race is underway.",
-        "Countries everywhere want in.",
-        "But they need partners who",
-        "can get them there."
-      ]'
+      text="First paragraph.\n\nSecond paragraph."
       bg-color="#5E636E"
       font-url="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'"
       font-family="'Orbitron', system-ui, sans-serif"
       font-size="2rem"
       font-color="#fff"
       cursor-color="#fff"
-      animation-duration="5s"
+      animation-duration="12s"
     ></csis-text-typing>
 
     <csis-magnifier magnifier-border-color="#fff"></csis-magnifier>
