fix typos, update style, add missing attribute for height

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
     </main>
 
     <csis-text-typing
-      text="First paragraph.\n\nSecond paragraph."
-      bg-color="#5E636E"
-      font-url="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'"
+      text="A new space race is underway.\n\nCountries everywhere want in.\n\nBut they need partners who can get them there."
+      bg-color="#222"
+      font-url="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
       font-family="'Orbitron', system-ui, sans-serif"
       font-size="2rem"
-      font-color="#fff"
-      cursor-color="#fff"
+      font-color="#80E4F6"
+      cursor-color="#80E4F6"
       animation-duration="12s"
+      min-height="50vh"
     ></csis-text-typing>
 
     <csis-magnifier magnifier-border-color="#fff"></csis-magnifier>
