Create attributes to control btn bg color

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       </p>
     </main>
 
+    <csis-split-landing
+      left-title="left"
+      bg-image-left="https://res.cloudinary.com/csisideaslab/image/upload/v1759435607/dev-team/annie-spratt-4CKAvwj0nok-unsplash-EDIT-EDIT.jpg"
+      btn-bg-color-left="#c3c3c3"
+      right-title="right"
+      bg-image-right="https://res.cloudinary.com/csisideaslab/image/upload/v1759435601/dev-team/annie-spratt-4CKAvwj0nok-unsplash-EDIT.jpg"
+      btn-bg-color-right="#000"
+    ></csis-split-landing>
     <csis-text-typing
       text="A new space race is underway.\n\nCountries everywhere want in.\n\nBut they need partners who can get them there."
       bg-color="#222"
