--- a/index.html
+++ b/index.html
@@ -37,14 +37,18 @@
     </main>
 
     <csis-split-landing
-      left-title="left"
+      left-title="Lorem impsum bla bla bla"
+      btn-left-link="https://duckduckgo.com"
+      left-target="_blank"
       bg-image-left="https://res.cloudinary.com/csisideaslab/image/upload/v1759435607/dev-team/annie-spratt-4CKAvwj0nok-unsplash-EDIT-EDIT.jpg"
       right-title="right"
+      btn-right-link="https://github.com"
       btn-bg-color-left="blue"
       btn-hover-bg-color-left="brown"
       bg-image-right="https://res.cloudinary.com/csisideaslab/image/upload/v1759435601/dev-team/annie-spratt-4CKAvwj0nok-unsplash-EDIT.jpg"
-      btn-border-color="pink"
+      btn-border-color="black"
       btn-hover-border-color="green"
+      btn-text="Some text..."
     ></csis-split-landing>
     <csis-text-typing
       text="A new space race is underway.\n\nCountries everywhere want in.\n\nBut they need partners who can get them there."
