Update hr footer to make csis logo accept text-color attribute

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
     ></csis-text-typing>
 
     <csis-magnifier magnifier-border-color="#fff"></csis-magnifier>
-    <csis-shorthand-footer></csis-shorthand-footer>
+    <csis-hidden-reach-footer></csis-hidden-reach-footer>
   </body>
 </html>
