make magnifier and labels optional

--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
       </p>
     </main>
 
-    <csis-triple-compare img-a="https://res.cloudinary.com/csisideaslab/image/upload/v1768337641/hidden-reach/image1.png"
+    <csis-triple-compare
+      img-a="https://res.cloudinary.com/csisideaslab/image/upload/v1768337641/hidden-reach/image1.png"
       img-b="https://res.cloudinary.com/csisideaslab/image/upload/v1768337638/hidden-reach/image2.png"
-      img-c="https://res.cloudinary.com/csisideaslab/image/upload/v1768337636/hidden-reach/image3.png" label-a="Mar 2, 2020"
-      label-b="Oct 10, 2023" label-c="Oct 30, 2025" split-1="33" split-2="66"
-      show-labels="true" aspect="16/9"></csis-triple-compare>
+      img-c="https://res.cloudinary.com/csisideaslab/image/upload/v1768337636/hidden-reach/image3.png"
+      split-1="33" 
+      split-2="66" 
+      aspect="16/9" 
+      show-labels
+      magnifier
+      ></csis-triple-compare>
 
     <csis-text-typing
       text="A new space race is underway.\n\nCountries everywhere want in.\n\nBut they need partners who can get them there."
