make font size adjustable

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       aspect="16/9" 
       show-labels
       magnifier
+      label-font-size="24px"
       ></csis-triple-compare>
 
     <csis-text-typing
