Fix playback menu appearing and close menu on clicking outside of it

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         ends up on the page.
       </p>
     </main>
-
+    <csis-audio-brief></csis-audio-brief>
     <csis-triple-compare show-labels=true></csis-triple-compare>
 
     <csis-magnifier magnifier-border-color="#fff"></csis-magnifier>
